--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "portpro",
+  "name": "portpro-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "A simple backend managing three different databases.",
   "main": "app.js",
+  "engines": {
+    "node": "18.x",
+    "npm": "8.x"
+  },
   "scripts": {
     "dev": "nodemon app.js",
+    "seed:mysql": "npx sequelize-cli db:seed:all",
+    "migrate:mysql": "npx sequelize-cli db:migrate",
+    "migrate:mysql:undo": "npx sequelize-cli db:migrate:undo",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
