--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-cassandra": "^2.9.0",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^6.0.1",
     "mongoose": "^7.0.3",
     "mysql2": "^3.2.0",
     "sequelize": "^6.30.0",
