--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "dev": "nodemon app.js",
+    "create:mysqldb":"npx sequelize-cli db:create -- $database_name",
     "seed:mysql": "npx sequelize-cli db:seed:all",
     "migrate:mysql": "npx sequelize-cli db:migrate",
     "migrate:mysql:undo": "npx sequelize-cli db:migrate:undo",
